tests/machine/x/php/values_builtin.error
PHP Fatal error:  Uncaught Error: Call to undefined function values() in /workspace/mochi/tests/machine/x/php/values_builtin.php:3
Stack trace:
#0 {main}
  thrown in /workspace/mochi/tests/machine/x/php/values_builtin.php on line 3
